// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries [classroom] should fetch its connections 1`] = `
Object {
  "node": Object {
    "name": "Matilde Prosacco MD",
  },
}
`;

exports[`queries [classroom] should fetch its connections 2`] = `
Object {
  "node": Object {
    "name": "Claudia Mohr",
  },
}
`;

exports[`queries [classroom] should fetch its connections 3`] = `
Object {
  "node": Object {
    "title": "Tasty Plastic Pizza",
  },
}
`;
